# data_privacy

./: .env.example  .gitignore  DP_Platform_Complete_Document.html  Procfile  README.md  generate_pdf.js  pdf_extracted.txt  pyproject.toml  railway.json
agent/: __init__.py  __main__.py  action_results.py  agui_endpoint.py  app.py  configs.py  knowledge_graph_builder.py  mock_data.py  views.py
agent/agents/: __init__.py  access_control_agent.py  alert_agent.py  compliance_agent.py  dark_web_agent.py  data_mapping_agent.py  dsr_agent.py  executive_report_agent.py  forensics_agent.py  incident_response_agent.py  news_verification.py  nlp_agent.py  risk_agent.py  security_arch_agent.py  similar_company.py  suggestion_agent.py  tavily_verification.py  threat_model_agent.py  vuln_scan_agent.py
agent/orchestrator/: __init__.py  dp_orchestrator.py  mock_orchestrator.py
client/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client-next/: Dockerfile  package-lock.json  package.json
client/src/: App.css  App.tsx  main.tsx
encyclopedia/: generate_chapter_pdf.js  generate_kg_pdf.js
encyclopedia/chapters/: chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  chapter_09.md  chapter_10.md  chapter_11.md  chapter_knowledge_graph_implementation_guide.md
encyclopedia/pdfs/: chapter_01.html  chapter_02.html  chapter_03.html  chapter_04.html  chapter_05.html  chapter_06.html  chapter_07.html  chapter_08.html  chapter_09.html  chapter_10.html  chapter_11.html  (+1 more)
(+9 files in other folders)
